test/should_fail/inh_model_005.gm
model inh_model_005;

node class A extends B;
node class B extends C,D;
node class D extends E;
node class E extends A;
node class C extends A;
